--- a/save-helper.cabal
+++ b/save-helper.cabal
@@ -67,7 +67,7 @@ library
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.15.1.0
+    build-depends:    base
 
     -- Directories containing source files.
     hs-source-dirs:   lib
